# le_snake

./: Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  styler.css
.github/workflows/: rust.yml
src/: board.rs  game.rs  input.rs  main.rs  menu.rs  types.rs
