[package]
name = "le_snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.61"
leptos = "0.2.4"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
wasm-bindgen = "0.2.84"
